<resources>
    <string name="app_name">Agenda</string>
    <string name="texto_editTextUsuario">Usuario</string>
    <string name="texto_editTextPass">Pass</string>
    <string name="texto_btnLogin">Login</string>
    <string name="texto_toastLoginIncorrecto">Introduzca un user y pass correctos</string>
    <string name="texto_iconAgenda">Icono de agenda</string>
    <string name="texto_botonVolver">Volver</string>
    <string name="texto_botonCrear">Nueva tarea</string>
    <string name="texto_botonVerLista">Ver tareas</string>
    <string name="texto_switchRecordarUser">¿Recordar Usuario?</string>
    <string name="texto_cambiarPass">Cambiar contraseña</string>
    <string name="texto_escribeNuevaPass">Escribe tu nueva contraseña</string>
    <string name="texto_passCambiada">Contraseña cambiada</string>
    <string name="texto_botonRegistrar">Registrar</string>
    <string name="texto_botonCancelar">Cancelar</string>
    <string name="texto_nombreTarea">Nombre</string>
    <string name="texto_descripcionTarea">Descripción</string>
    <string name="texto_fechaTarea">Fecha</string>
    <string name="texto_costeTarea">Coste</string>
    <string-array name="Prioridad">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
        <item>Urgente</item>
    </string-array>
    <string name="texto_prioridadBaja">Baja</string>
    <string name="texto_prioridadMedia">Media</string>
    <string name="texto_prioridadAlta">Alta</string>
    <string name="texto_prioridadUrgente">Urgente</string>
    <string name="texto_checkBoxRealizada">Realizada</string>
    <string name="texto_botonTareasRealizadas">Realizadas</string>
    <string name="texto_botonTareasPendientes">Pendientes</string>
    <string name="texto_botonModificar">Modificar</string>
    <string name="texto_botonBorrar">Borrar</string>
    <string name="texto_tituloAlertDialog">Borrar tarea</string>
    <string name="texto_aceptarAlertDialog">Aceptar</string>
    <string name="texto_mensajeAlertDialog">¿Seguro que desea borrar esta Tarea?</string>
    <string name="texto_toastIntroduceDatos">Debe introducir los datos de la nueva tarea</string>
    <string name="texto_toastCreadoCorrectamente">Se ha creado la nueva tarea</string>
    <string name="texto_toastModificadoCorrectamente">Se ha modificado con éxito</string>
</resources>