<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/idButtonRegistrar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/texto_botonModificar"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:icon="@android:drawable/ic_menu_edit"
        app:iconGravity="end"
        app:iconPadding="1dp"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <Button
        android:id="@+id/idBtnCancelarRegister"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/purple"
        android:text="@string/texto_botonVolver"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/idButtonBorrarDetail"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/red"
        android:soundEffectsEnabled="false"
        android:text="@string/texto_botonBorrar"
        android:textSize="12sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:icon="@android:drawable/ic_menu_delete"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/idEditTextNombreRegister"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/texto_nombreTarea"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/idEditTextDescripcionRegister"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="add"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/texto_descripcionTarea"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <EditText
        android:id="@+id/idEditTextFechaRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/texto_fechaTarea"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <EditText
        android:id="@+id/idEditTextCosteRegister"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/texto_costeTarea"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Spinner
        android:id="@+id/idSpinnerPrioridadRegister"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="add"
        android:entries="@array/Prioridad"
        android:foregroundTint="#FFFFFF"
        android:minHeight="48dp"
        android:splitMotionEvents="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <CheckBox
        android:id="@+id/idCheckBoxRealizadaRegister"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:buttonTint="@color/purple"
        android:buttonTintMode="src_in"
        android:text="@string/texto_checkBoxRealizada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />


</androidx.constraintlayout.widget.ConstraintLayout>